Fixe bug tablette overflow element

--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -295,7 +295,7 @@ h5, .h5-like {
 .site-banner.is-stuck .logo,
 .site-banner .logo {
     margin-top: -30px;
-    margin-left: 70px;
+    margin-left: 30px;
 }
 
 .site-banner .btn-primary {
